added open graph

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="./scss/style.css">
+    <link rel="icon" href="./img/favicon.svg" sizes="32x32">
+    <meta property="og:title" content="Kinoarea" />
+    <meta property="og:type" content="photo.movie" />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta property="og:image" content="./img/open-graph.png" />
+    <title>Kinoarea</title>
 </head>
 
 <body>
