updated open graph

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <meta property="og:title" content="Kinoarea" />
     <meta property="og:type" content="photo.movie" />
     <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="./img/open-graph.png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image" content="https://adacourses-1.github.io/korearea/img/open-graph.png" />
     <title>Kinoarea</title>
 </head>
 
